// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Customer: Model for storing customer information including balance and credit limit.
Item: Model for storing item details including quantity and calculated amount.
Order: Model for storing order information including link to customer and notes.
Product: Model for storing product information including name and unit price.
OrderDetail: Model for storing order detail linking orders and items.
'''
}

Table Customer {
    id INTEGER [primary key]
    name VARCHAR(50) 
    balance DECIMAL 
    credit_limit DECIMAL 
    }

Table Item {
    id INTEGER [primary key]
    order_id INTEGER 
    product_id INTEGER 
    quantity INTEGER 
    unit_price DECIMAL 
    amount DECIMAL 
    }

Table Order {
    id INTEGER [primary key]
    customer_id INTEGER 
    amount_total DECIMAL 
    date_shipped DATE 
    notes VARCHAR(200) 
    }

Table Product {
    id INTEGER [primary key]
    name VARCHAR(50) 
    unit_price DECIMAL 
    }

Table OrderDetail {
    id INTEGER [primary key]
    order_id INTEGER 
    item_id INTEGER 
    }



// Relationships
    Ref: Item.(order_id) < Order.(id)
    Ref: Item.(product_id) < Product.(id)
    Ref: Order.(customer_id) < Customer.(id)
    Ref: OrderDetail.(item_id) < Item.(id)
    Ref: OrderDetail.(order_id) < Order.(id)
